# luckfox-bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
.clwb/aspects/: code_generator_info.bzl  java_info.bzl  python_info.bzl
.github/workflows/: build.yaml
docker-bazel-buildfarm/: docker-compose.yaml
docker-bazel-buildfarm/config/: config.yaml
remote-docker-deploy/buildbarn/: README.md
test/helloworld/: BUILD.bazel  helloworld.cpp
toolchain/: BUILD.bazel  cc_luckfox_toolchain_config.bzl  deps.bzl  toolchains.bzl
toolchain/toolchains/cc-armv7l-luckfox/: BUILD.bazel  cc_toolchain_config.bzl
toolchain/toolchains/cc-armv7l-luckfox/wrappers/: wrapper
toolchains/: BUILD.bazel  toolchains.MODULE.bazel
toolchains/toolchains/gcc-armv7l-linux-ulibc-luckfox/: BUILD.bazel  cc_toolchain_config.bzl
toolchains/toolchains/gcc-armv7l-linux-ulibc-luckfox/wrappers/: wrapper
toolchains/toolchains/glibc-linux-gnu-x86_64/: BUILD.bazel  cc_toolchain_config.bzl
toolchains/toolchains/glibc-linux-gnu-x86_64/wrappers/: wrapper
toolchains/wrappers/: readme.md  wrapper
