bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")

#bazel_dep(name = "sqlite3", version = "3.47.1")
#bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "googletest", version = "1.15.2")
#bazel_dep(name = "rules_pkg", version = "1.0.1")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

include("//third-party:repositories.MODULE.bazel")

include("//toolchains:toolchains.MODULE.bazel")
