workspace(name = "luckfox")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_foreign_cc",
    sha256 = "476303bd0f1b04cc311fc258f1708a5f6ef82d3091e53fd1977fa20383425a6a",
    strip_prefix = "rules_foreign_cc-0.10.1",
    url = "https://github.com/bazelbuild/rules_foreign_cc/releases/download/0.10.1/rules_foreign_cc-0.10.1.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# This sets up some common toolchains for building targets. For more details, please see
# https://bazelbuild.github.io/rules_foreign_cc/0.10.1/flatten.html#rules_foreign_cc_dependencies
#rules_foreign_cc_dependencies()
rules_foreign_cc_dependencies(
    # register_built_tools = True,
    # register_default_tools = True,
    # register_preinstalled_tools = True,
    # register_toolchains = True,
)

load("//toolchain:deps.bzl", "deps")
load("//toolchain:toolchains.bzl", "register_all_toolchains")

deps()

register_all_toolchains()

load("//third-party:repositories.bzl", "repositories")

repositories()
