package(default_visibility = ["//visibility:public"])

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

filegroup(
    name = "wrappers",
    srcs = glob([
        "wrappers/**",
    ]),
)

filegroup(
    name = "all_files",
    srcs = [
        ":wrappers",
        "@cc-armv7l-luckfox//:toolchain",
    ],
)

cc_toolchain_config(
    name = "armv7l_luckfox_toolchain_config",
)

cc_toolchain(
    name = "armv7l_luckfox_toolchain",
    all_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":armv7l_luckfox_toolchain_config",
    toolchain_identifier = "armv7l_luckfox-toolchain",
)

cc_toolchain_suite(
    name = "gcc_toolchain",
    toolchains = {
        "luckfox": ":armv7l_luckfox_toolchain",
    },
)

toolchain(
    name = "armv7l_luckfox_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7",
    ],
    toolchain = ":armv7l_luckfox_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
