load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

exports_files(["cc_toolchain_config.bzl"])

filegroup(name = "empty")

filegroup(
    name = "wrappers",
    srcs = glob(["wrappers/**"]),
)

filegroup(
    name = "all_files",
    srcs = [
        ":wrappers",
        "@gcc-armv7l-linux-ulibc-luckfox//:toolchain",
    ],
)

cc_toolchain_config(
    name = "gcc-armv7l-linux-ulibc-luckfox_toolchain_config",
)

cc_toolchain(
    name = "gcc-armv7l-linux-ulibc-luckfox_toolchain",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    coverage_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":gcc-armv7l-linux-ulibc-luckfox_toolchain_config",
    toolchain_identifier = "gcc-armv7l-linux-ulibc-luckfox-toolchain",
)

toolchain(
    name = "gcc-armv7l-linux-ulibc-luckfox_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:armv7",
    ],
    toolchain = ":gcc-armv7l-linux-ulibc-luckfox_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
