load(":cc_toolchain_config.bzl", "cc_toolchain_config")

exports_files(["cc_toolchain_config.bzl"])

package(default_visibility = ["//visibility:public"])

filegroup(name = "empty")

filegroup(
    name = "wrappers",
    srcs = glob(["wrappers/**"]),
)

filegroup(
    name = "all_files",
    srcs = [
        ":wrappers",
        "@glibc-linux-gnu-x86_64//:toolchain",
    ],
)

cc_toolchain_config(
    name = "glibc-linux-gnu-x86_64_toolchain_config",
)

cc_toolchain(
    name = "glibc-linux-gnu-x86_64_toolchain",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    coverage_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":glibc-linux-gnu-x86_64_toolchain_config",
    toolchain_identifier = "glibc-linux-gnu-x86_64-toolchain",
)

toolchain(
    name = "glibc-linux-gnu-x86_64_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":glibc-linux-gnu-x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
